--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "devDependencies": {
         "@babel/core": "^7.22.5",
         "@babel/preset-env": "^7.22.5",
+        "autoprefixer": "^10.4.21",
         "babel-loader": "^9.1.2",
         "css-loader": "^6.8.1",
+        "css-minimizer-webpack-plugin": "^7.0.2",
         "eslint": "^8.43.0",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.3",
         "jest": "^29.5.0",
         "mini-css-extract-plugin": "^2.7.6",
+        "postcss-loader": "^8.1.1",
         "sass": "^1.63.6",
         "sass-loader": "^13.3.2",
         "style-loader": "^3.3.3",
@@ -40,6 +43,5 @@
         "webpack": "^5.88.0",
         "webpack-cli": "^5.1.4",
         "webpack-dev-server": "^4.15.1"
-    },
-    "dependencies": {}
+    }
 }
