archiving. learned a lot, starting over from lessons with v2

--- a/.gitignore
+++ b/.gitignore
@@ -101,8 +101,16 @@ temp/
 *.tmp
 
 # Cursor and agent files
-agent.md
-project-status.md
+/agent.md
+/project-status.md
 .cursor/
 cursor.json
 .cursorignore
+
+# Allow documentation files in docs directory
+!docs/DESIGN_SYSTEM.md
+!docs/agent.md
+!docs/project-status.md
+
+# v1 folder (previous version backup)
+/v1/
