WIP: Save current state before architecture changes

--- a/.gitignore
+++ b/.gitignore
@@ -101,16 +101,14 @@ temp/
 *.tmp
 
 # Cursor and agent files
-/agent.md
-/project-status.md
 .cursor/
 cursor.json
 .cursorignore
 
-# Allow documentation files in docs directory
-!docs/DESIGN_SYSTEM.md
-!docs/agent.md
-!docs/project-status.md
-
 # v1 folder (previous version backup)
-/v1/
+/.v1/
+# Project Documentation (not tracked)
+docs/
+
+# Old version backup
+old-web-debugger/
