--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "devDependencies": {
         "@types/chrome": "^0.0.310",
         "@types/node": "^20.12.11",
+        "esbuild": "^0.25.1",
         "typescript": "^5.4.2",
         "vite": "^5.1.5"
     },
