--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,10 +17,11 @@
     },
     "content_scripts": [
         {
-            "matches": ["<all_urls>"],
+            "matches": ["http://*/*", "https://*/*"],
             "js": ["js/content-script.js"],
             "run_at": "document_start",
-            "all_frames": false
+            "all_frames": false,
+            "world": "ISOLATED"
         }
     ],
     "icons": {
