Fix tab detection and content script world settings

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,7 +21,7 @@
             "js": ["js/content-script.js"],
             "run_at": "document_start",
             "all_frames": false,
-            "world": "ISOLATED"
+            "world": "isolated"
         }
     ],
     "icons": {
